src/objects/Accounting_Period__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date</description>
        <inlineHelpText>End Date</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Start Date</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Period Status</description>
        <inlineHelpText>Period Status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finally Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summarized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Summarized</description>
        <inlineHelpText>Summarized</inlineHelpText>
        <label>Summarized</label>
        <type>Checkbox</type>
    </fields>
    <label>Accounting Period</label>
    <nameField>
        <displayFormat>API-{0000}</displayFormat>
        <label>Accounting Period ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_Check</fullName>
        <active>true</active>
        <description>Start Date should not be greater than End Date</description>
        <errorConditionFormula>Start_Date__c &gt;  End_Date__c</errorConditionFormula>
        <errorMessage>Start Date cannot be greater than End Date</errorMessage>
    </validationRules>
</CustomObject>